tests/baselines/reference/isLiteral1.errors.txt
==== tests/cases/compiler/isLiteral1.ts (1 errors) ====
    var x: number = 02343;
                    ~~~~~
!!! isLiteral1.ts(1,17): error TS1085: Octal literals are not available when targeting ECMAScript 5 and higher.